# Video_rust_src_better-douyin-R

./: README.md  package-lock.json  package.json
.github/workflows/: ci.yml  finalize-updater.yml  release.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: use-downloads.ts
frontend/src/lib/: contracts.ts  media-prewarm.ts  normalizers.ts  socket.ts  tauri-download.ts  tauri.ts  update-notes.ts  verify-recovery.ts  video-media.ts
frontend/src/stores/: app-store.ts  liked-store.ts  link-store.ts  recommended-store.ts  search-store.ts
frontend/src/types/: index.ts
packaging/package-managers/: README.md
packaging/package-managers/homebrew/: better-douyin-r.rb
scripts/: check-api-surface.mjs  check-frontend-parity.mjs  finalize-updater-metadata.mjs  generate-package-manifests.mjs  rename-release-assets.mjs
skill/better-douyin-r/: SKILL.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cookie.rs  lib.rs  media_proxy.rs  media_utils.rs  reporter.rs
src-tauri/src/api/: client.rs  client_comments.rs  client_content.rs  client_feed.rs  client_im.rs  client_relations.rs  im_proto.rs  mod.rs  types.rs
src-tauri/src/commands/: config.rs  content.rs  content_video.rs  download_files_cmd.rs  downloads.rs  history.rs  mod.rs  system.rs  update_cmd.rs
src-tauri/src/config/: mod.rs
src-tauri/src/downloader/: batch.rs  completion.rs  downloader.rs  filename.rs  http.rs  media_group.rs  media_request.rs  mod.rs  quality.rs
src-tauri/src/history/: mod.rs
src-tauri/src/sign/: mod.rs
(+67 files in other folders)
