[package]
name = "douyin-downloader"
version = "1.0.24"
description = "抖音视频下载器"
authors = ["anYuJia"]
license = "MIT"
repository = "https://github.com/anYuJia/douyin-downloader-rust"
edition = "2021"
rust-version = "1.77.2"
default-run = "douyin-downloader"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "zstd", "stream"] }
tokio = { version = "1", features = ["full"] }

# JSON 处理
serde_urlencoded = "0.7"
base64 = "0.22"
urlencoding = "2"
hmac = "0.12"
sha2 = "0.10"
md5 = "0.7"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
openssl = "0.10"
aes-gcm = "0.10"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 正则表达式
regex = "1"

# 随机数
rand = "0.8"

# 错误处理
anyhow = "1"
thiserror = "1"

# 路径处理
dirs = "6"

# 解析 HTML
scraper = "0.19"

# 异步通道
futures = "0.3"
tower-http = { version = "0.6", features = ["fs"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# CLI
clap = { version = "4", features = ["derive"] }
axum = "0.7"
url = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
